k8s/overlays/production/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: frontend
          image: ghcr.io/uiuc-college-of-media/chatbot-survey-frontend:latest
          imagePullPolicy: Always
